# simple-django-app

./: .gitignore  README.md  pyproject.toml
jobs/: forms.py  models.py  urls.py  views.py
jobs/management/commands/: populate_jobs.py
jobs/migrations/: 0001_initial.py
jobs/templates/: base.html  home.html
jobs/templates/account/: login.html
jobs/templates/jobs/: job_search.html
jobs/templates/utils/: paginator.html
main/: settings.py  urls.py
